--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -w",
-    "dev":"nodemon build/index.js",
-    "start":"node build/index.js",
+    "dev": "nodemon build/index.js",
+    "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ahadu",
   "license": "ISC",
   "dependencies": {
+    "@sinclair/typebox": "^0.24.28",
     "@types/node": "^18.7.6",
     "fastify": "^4.5.2",
     "nodemon": "^2.0.19",
